// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render TableFilters properly 1`] = `
<div
  className="TableFilters"
>
  <div
    className="TableFilters__user"
  >
    <p>
      Filter by user
    </p>
    <input
      onChange={[Function]}
      placeholder="Start writing user name..."
      type="text"
      value=""
    />
  </div>
  <div
    className="TableFilters__pagination"
  >
    <p>
      Number of visible rows
    </p>
    <select
      onChange={[Function]}
      value={5}
    >
      <option
        key="5"
      >
        5
      </option>
      <option
        key="10"
      >
        10
      </option>
      <option
        key="15"
      >
        15
      </option>
      <option
        key="20"
      >
        20
      </option>
    </select>
  </div>
</div>
`;

exports[`should render TableFilters with alt data properly 1`] = `
<div
  className="TableFilters"
>
  <div
    className="TableFilters__user"
  >
    <p>
      Filter by user
    </p>
    <input
      onChange={[Function]}
      placeholder="Start writing user name..."
      type="text"
      value="b"
    />
  </div>
  <div
    className="TableFilters__pagination"
  >
    <p>
      Number of visible rows
    </p>
    <select
      onChange={[Function]}
      value={10}
    >
      <option
        key="5"
      >
        5
      </option>
      <option
        key="10"
      >
        10
      </option>
      <option
        key="15"
      >
        15
      </option>
      <option
        key="20"
      >
        20
      </option>
    </select>
  </div>
</div>
`;
